src/yacc/y.output
Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList ClassDecl
    3         | ClassDecl

    4 VarDecl: Type ID SEMI
    5        | Type ID error SEMI

    6 Type: INT
    7     | BOOL
    8     | STRING
    9     | NamedType
   10     | ArrayType

   11 NamedType: CLASS ID

   12 ArrayType: Type LB RB

   13 FunDecl: Type ID LP Formals RP StmtBlock
   14        | VOID ID LP Formals RP StmtBlock
   15        | STATIC Type ID LP Formals RP StmtBlock
   16        | STATIC VOID ID LP Formals RP StmtBlock

   17 Formals: %empty
   18        | Variables

   19 Variables: Variables COMMA Type ID
   20          | Type ID

   21 ClassDecl: CLASS ID EXTENDS ID LC Fields RC
   22          | CLASS ID EXTENDS ID LC RC
   23          | CLASS ID LC Fields RC
   24          | CLASS ID LC RC

   25 Fields: Fields Field
   26       | Field

   27 Field: VarDecl
   28      | FunDecl

   29 StmtBlock: LC Stmts RC
   30          | LC RC

   31 Stmts: Stmts Stmt
   32      | Stmt

   33 Stmt: OptExpr SEMI
   34     | IfStmt
   35     | WhileStmt
   36     | ForStmt
   37     | BreakStmt
   38     | ReturnStmt
   39     | PrintStmt
   40     | StmtBlock
   41     | VarDecl

   42 IfStmt: IF LP Expr RP Stmt
   43       | IF LP Expr RP Stmt ELSE Stmt

   44 WhileStmt: WHILE LP Expr RP Stmt

   45 ForStmt: FOR LP OptExpr SEMI Expr SEMI OptExpr RP Stmt

   46 ReturnStmt: RETURN OptExpr SEMI

   47 BreakStmt: BREAK SEMI

   48 PrintStmt: PRINT LP Exprs RP SEMI

   49 Expr: AssignExpr
   50     | Constant
   51     | LValue
   52     | THIS
   53     | Call
   54     | LP Expr RP
   55     | ArithmeticExpr
   56     | RelationalExpr
   57     | LogicalExpr
   58     | READINTEGER LP RP
   59     | READLINE LP RP
   60     | INSTANCEOF LP Expr COMMA ID RP
   61     | NewExpr
   62     | NewArrayExpr

   63 NewExpr: NEW ID LP RP

   64 NewArrayExpr: NEWARRAY LP Type COMMA Expr RP

   65 AssignExpr: LValue ASSIGNOP Expr

   66 ArithmeticExpr: Expr PLUS Expr
   67               | Expr MINUS Expr
   68               | Expr STAR Expr
   69               | Expr DIV Expr
   70               | Expr MOD Expr
   71               | MINUS Expr

   72 RelationalExpr: Expr GREATER Expr
   73               | Expr LESS Expr
   74               | Expr GREATEREQUAL Expr
   75               | Expr LESSEQUAL Expr
   76               | Expr EQUAL Expr
   77               | Expr NOTEQUAL Expr

   78 LogicalExpr: Expr AND Expr
   79            | Expr OR Expr
   80            | NOT Expr

   81 Exprs: Exprs COMMA Expr
   82      | Expr

   83 OptExpr: Expr
   84        | %empty

   85 LValue: FieldAccess
   86       | ArrayAccess

   87 FieldAccess: ID
   88            | Expr DOT ID

   89 Call: ID LP Actuals RP
   90     | Expr DOT ID LP Actuals RP

   91 ArrayAccess: Expr LB Expr RB

   92 Actuals: Exprs
   93        | %empty

   94 Constant: INTCONSTANT
   95         | BOOLCONSTANT
   96         | STRINGCONSTANT
   97         | NULLCONSTANT


Terminals, with rules where they appear

$end (0) 0
error (256) 5
BOOL (258) 7
BREAK (259) 47
CLASS (260) 11 21 22 23 24
ELSE (261) 43
EXTENDS (262) 21 22
FOR (263) 45
IF (264) 42 43
INT (265) 6
NEW (266) 63
NEWARRAY (267) 64
RETURN (268) 46
STRING (269) 8
THIS (270) 52
VOID (271) 14 16
WHILE (272) 44
STATIC (273) 15 16
PRINT (274) 48
READINTEGER (275) 58
READLINE (276) 59
INSTANCEOF (277) 60
NULLCONSTANT (278) 97
BOOLCONSTANT (279) 95
INTCONSTANT (280) 94
STRINGCONSTANT (281) 96
ID (282) 4 5 11 13 14 15 16 19 20 21 22 23 24 60 63 87 88 89 90
SEMI (283) 4 5 33 45 46 47 48
COMMA (284) 19 60 64 81
LC (285) 21 22 23 24 29 30
RC (286) 21 22 23 24 29 30
LOWER_THAN_ELSE (287)
ASSIGNOP (288) 65
OR (289) 79
AND (290) 78
GREATER (291) 72
LESS (292) 73
GREATEREQUAL (293) 74
LESSEQUAL (294) 75
EQUAL (295) 76
NOTEQUAL (296) 77
PLUS (297) 66
MINUS (298) 67 71
STAR (299) 68
DIV (300) 69
MOD (301) 70
NOT (302) 80
UMINUS (303)
LP (304) 13 14 15 16 42 43 44 45 48 54 58 59 60 63 64 89 90
RP (305) 13 14 15 16 42 43 44 45 48 54 58 59 60 63 64 89 90
LB (306) 12 91
RB (307) 12 91
DOT (308) 88 90


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
Program (55)
    on left: 1, on right: 0
DeclList (56)
    on left: 2 3, on right: 1 2
VarDecl (57)
    on left: 4 5, on right: 27 41
Type (58)
    on left: 6 7 8 9 10, on right: 4 5 12 13 15 19 20 64
NamedType (59)
    on left: 11, on right: 9
ArrayType (60)
    on left: 12, on right: 10
FunDecl (61)
    on left: 13 14 15 16, on right: 28
Formals (62)
    on left: 17 18, on right: 13 14 15 16
Variables (63)
    on left: 19 20, on right: 18 19
ClassDecl (64)
    on left: 21 22 23 24, on right: 2 3
Fields (65)
    on left: 25 26, on right: 21 23 25
Field (66)
    on left: 27 28, on right: 25 26
StmtBlock (67)
    on left: 29 30, on right: 13 14 15 16 40
Stmts (68)
    on left: 31 32, on right: 29 31
Stmt (69)
    on left: 33 34 35 36 37 38 39 40 41, on right: 31 32 42 43 44 45
IfStmt (70)
    on left: 42 43, on right: 34
WhileStmt (71)
    on left: 44, on right: 35
ForStmt (72)
    on left: 45, on right: 36
ReturnStmt (73)
    on left: 46, on right: 38
BreakStmt (74)
    on left: 47, on right: 37
PrintStmt (75)
    on left: 48, on right: 39
Expr (76)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62, on right: 42
    43 44 45 54 60 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
    80 81 82 83 88 90 91
NewExpr (77)
    on left: 63, on right: 61
NewArrayExpr (78)
    on left: 64, on right: 62
AssignExpr (79)
    on left: 65, on right: 49
ArithmeticExpr (80)
    on left: 66 67 68 69 70 71, on right: 55
RelationalExpr (81)
    on left: 72 73 74 75 76 77, on right: 56
LogicalExpr (82)
    on left: 78 79 80, on right: 57
Exprs (83)
    on left: 81 82, on right: 48 81 92
OptExpr (84)
    on left: 83 84, on right: 33 45 46
LValue (85)
    on left: 85 86, on right: 51 65
FieldAccess (86)
    on left: 87 88, on right: 85
Call (87)
    on left: 89 90, on right: 53
ArrayAccess (88)
    on left: 91, on right: 86
Actuals (89)
    on left: 92 93, on right: 89 90
Constant (90)
    on left: 94 95 96 97, on right: 50


State 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program    go to state 2
    DeclList   go to state 3
    ClassDecl  go to state 4


State 1

   21 ClassDecl: CLASS . ID EXTENDS ID LC Fields RC
   22          | CLASS . ID EXTENDS ID LC RC
   23          | CLASS . ID LC Fields RC
   24          | CLASS . ID LC RC

    ID  shift, and go to state 5


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 6


State 3

    1 Program: DeclList .
    2 DeclList: DeclList . ClassDecl

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (Program)

    ClassDecl  go to state 7


State 4

    3 DeclList: ClassDecl .

    $default  reduce using rule 3 (DeclList)


State 5

   21 ClassDecl: CLASS ID . EXTENDS ID LC Fields RC
   22          | CLASS ID . EXTENDS ID LC RC
   23          | CLASS ID . LC Fields RC
   24          | CLASS ID . LC RC

    EXTENDS  shift, and go to state 8
    LC       shift, and go to state 9


State 6

    0 $accept: Program $end .

    $default  accept


State 7

    2 DeclList: DeclList ClassDecl .

    $default  reduce using rule 2 (DeclList)


State 8

   21 ClassDecl: CLASS ID EXTENDS . ID LC Fields RC
   22          | CLASS ID EXTENDS . ID LC RC

    ID  shift, and go to state 10


State 9

   23 ClassDecl: CLASS ID LC . Fields RC
   24          | CLASS ID LC . RC

    BOOL    shift, and go to state 11
    CLASS   shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14
    VOID    shift, and go to state 15
    STATIC  shift, and go to state 16
    RC      shift, and go to state 17

    VarDecl    go to state 18
    Type       go to state 19
    NamedType  go to state 20
    ArrayType  go to state 21
    FunDecl    go to state 22
    Fields     go to state 23
    Field      go to state 24


State 10

   21 ClassDecl: CLASS ID EXTENDS ID . LC Fields RC
   22          | CLASS ID EXTENDS ID . LC RC

    LC  shift, and go to state 25


State 11

    7 Type: BOOL .

    $default  reduce using rule 7 (Type)


State 12

   11 NamedType: CLASS . ID

    ID  shift, and go to state 26


State 13

    6 Type: INT .

    $default  reduce using rule 6 (Type)


State 14

    8 Type: STRING .

    $default  reduce using rule 8 (Type)


State 15

   14 FunDecl: VOID . ID LP Formals RP StmtBlock

    ID  shift, and go to state 27


State 16

   15 FunDecl: STATIC . Type ID LP Formals RP StmtBlock
   16        | STATIC . VOID ID LP Formals RP StmtBlock

    BOOL    shift, and go to state 11
    CLASS   shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14
    VOID    shift, and go to state 28

    Type       go to state 29
    NamedType  go to state 20
    ArrayType  go to state 21


State 17

   24 ClassDecl: CLASS ID LC RC .

    $default  reduce using rule 24 (ClassDecl)


State 18

   27 Field: VarDecl .

    $default  reduce using rule 27 (Field)


State 19

    4 VarDecl: Type . ID SEMI
    5        | Type . ID error SEMI
   12 ArrayType: Type . LB RB
   13 FunDecl: Type . ID LP Formals RP StmtBlock

    ID  shift, and go to state 30
    LB  shift, and go to state 31


State 20

    9 Type: NamedType .

    $default  reduce using rule 9 (Type)


State 21

   10 Type: ArrayType .

    $default  reduce using rule 10 (Type)


State 22

   28 Field: FunDecl .

    $default  reduce using rule 28 (Field)


State 23

   23 ClassDecl: CLASS ID LC Fields . RC
   25 Fields: Fields . Field

    BOOL    shift, and go to state 11
    CLASS   shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14
    VOID    shift, and go to state 15
    STATIC  shift, and go to state 16
    RC      shift, and go to state 32

    VarDecl    go to state 18
    Type       go to state 19
    NamedType  go to state 20
    ArrayType  go to state 21
    FunDecl    go to state 22
    Field      go to state 33


State 24

   26 Fields: Field .

    $default  reduce using rule 26 (Fields)


State 25

   21 ClassDecl: CLASS ID EXTENDS ID LC . Fields RC
   22          | CLASS ID EXTENDS ID LC . RC

    BOOL    shift, and go to state 11
    CLASS   shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14
    VOID    shift, and go to state 15
    STATIC  shift, and go to state 16
    RC      shift, and go to state 34

    VarDecl    go to state 18
    Type       go to state 19
    NamedType  go to state 20
    ArrayType  go to state 21
    FunDecl    go to state 22
    Fields     go to state 35
    Field      go to state 24


State 26

   11 NamedType: CLASS ID .

    $default  reduce using rule 11 (NamedType)


State 27

   14 FunDecl: VOID ID . LP Formals RP StmtBlock

    LP  shift, and go to state 36


State 28

   16 FunDecl: STATIC VOID . ID LP Formals RP StmtBlock

    ID  shift, and go to state 37


State 29

   12 ArrayType: Type . LB RB
   15 FunDecl: STATIC Type . ID LP Formals RP StmtBlock

    ID  shift, and go to state 38
    LB  shift, and go to state 31


State 30

    4 VarDecl: Type ID . SEMI
    5        | Type ID . error SEMI
   13 FunDecl: Type ID . LP Formals RP StmtBlock

    error  shift, and go to state 39
    SEMI   shift, and go to state 40
    LP     shift, and go to state 41


State 31

   12 ArrayType: Type LB . RB

    RB  shift, and go to state 42


State 32

   23 ClassDecl: CLASS ID LC Fields RC .

    $default  reduce using rule 23 (ClassDecl)


State 33

   25 Fields: Fields Field .

    $default  reduce using rule 25 (Fields)


State 34

   22 ClassDecl: CLASS ID EXTENDS ID LC RC .

    $default  reduce using rule 22 (ClassDecl)


State 35

   21 ClassDecl: CLASS ID EXTENDS ID LC Fields . RC
   25 Fields: Fields . Field

    BOOL    shift, and go to state 11
    CLASS   shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14
    VOID    shift, and go to state 15
    STATIC  shift, and go to state 16
    RC      shift, and go to state 43

    VarDecl    go to state 18
    Type       go to state 19
    NamedType  go to state 20
    ArrayType  go to state 21
    FunDecl    go to state 22
    Field      go to state 33


State 36

   14 FunDecl: VOID ID LP . Formals RP StmtBlock

    BOOL    shift, and go to state 11
    CLASS   shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14

    $default  reduce using rule 17 (Formals)

    Type       go to state 44
    NamedType  go to state 20
    ArrayType  go to state 21
    Formals    go to state 45
    Variables  go to state 46


State 37

   16 FunDecl: STATIC VOID ID . LP Formals RP StmtBlock

    LP  shift, and go to state 47


State 38

   15 FunDecl: STATIC Type ID . LP Formals RP StmtBlock

    LP  shift, and go to state 48


State 39

    5 VarDecl: Type ID error . SEMI

    SEMI  shift, and go to state 49


State 40

    4 VarDecl: Type ID SEMI .

    $default  reduce using rule 4 (VarDecl)


State 41

   13 FunDecl: Type ID LP . Formals RP StmtBlock

    BOOL    shift, and go to state 11
    CLASS   shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14

    $default  reduce using rule 17 (Formals)

    Type       go to state 44
    NamedType  go to state 20
    ArrayType  go to state 21
    Formals    go to state 50
    Variables  go to state 46


State 42

   12 ArrayType: Type LB RB .

    $default  reduce using rule 12 (ArrayType)


State 43

   21 ClassDecl: CLASS ID EXTENDS ID LC Fields RC .

    $default  reduce using rule 21 (ClassDecl)


State 44

   12 ArrayType: Type . LB RB
   20 Variables: Type . ID

    ID  shift, and go to state 51
    LB  shift, and go to state 31


State 45

   14 FunDecl: VOID ID LP Formals . RP StmtBlock

    RP  shift, and go to state 52


State 46

   18 Formals: Variables .
   19 Variables: Variables . COMMA Type ID

    COMMA  shift, and go to state 53

    $default  reduce using rule 18 (Formals)


State 47

   16 FunDecl: STATIC VOID ID LP . Formals RP StmtBlock

    BOOL    shift, and go to state 11
    CLASS   shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14

    $default  reduce using rule 17 (Formals)

    Type       go to state 44
    NamedType  go to state 20
    ArrayType  go to state 21
    Formals    go to state 54
    Variables  go to state 46


State 48

   15 FunDecl: STATIC Type ID LP . Formals RP StmtBlock

    BOOL    shift, and go to state 11
    CLASS   shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14

    $default  reduce using rule 17 (Formals)

    Type       go to state 44
    NamedType  go to state 20
    ArrayType  go to state 21
    Formals    go to state 55
    Variables  go to state 46


State 49

    5 VarDecl: Type ID error SEMI .

    $default  reduce using rule 5 (VarDecl)


State 50

   13 FunDecl: Type ID LP Formals . RP StmtBlock

    RP  shift, and go to state 56


State 51

   20 Variables: Type ID .

    $default  reduce using rule 20 (Variables)


State 52

   14 FunDecl: VOID ID LP Formals RP . StmtBlock

    LC  shift, and go to state 57

    StmtBlock  go to state 58


State 53

   19 Variables: Variables COMMA . Type ID

    BOOL    shift, and go to state 11
    CLASS   shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14

    Type       go to state 59
    NamedType  go to state 20
    ArrayType  go to state 21


State 54

   16 FunDecl: STATIC VOID ID LP Formals . RP StmtBlock

    RP  shift, and go to state 60


State 55

   15 FunDecl: STATIC Type ID LP Formals . RP StmtBlock

    RP  shift, and go to state 61


State 56

   13 FunDecl: Type ID LP Formals RP . StmtBlock

    LC  shift, and go to state 57

    StmtBlock  go to state 62


State 57

   29 StmtBlock: LC . Stmts RC
   30          | LC . RC

    BOOL            shift, and go to state 11
    BREAK           shift, and go to state 63
    CLASS           shift, and go to state 12
    FOR             shift, and go to state 64
    IF              shift, and go to state 65
    INT             shift, and go to state 13
    NEW             shift, and go to state 66
    NEWARRAY        shift, and go to state 67
    RETURN          shift, and go to state 68
    STRING          shift, and go to state 14
    THIS            shift, and go to state 69
    WHILE           shift, and go to state 70
    PRINT           shift, and go to state 71
    READINTEGER     shift, and go to state 72
    READLINE        shift, and go to state 73
    INSTANCEOF      shift, and go to state 74
    NULLCONSTANT    shift, and go to state 75
    BOOLCONSTANT    shift, and go to state 76
    INTCONSTANT     shift, and go to state 77
    STRINGCONSTANT  shift, and go to state 78
    ID              shift, and go to state 79
    LC              shift, and go to state 57
    RC              shift, and go to state 80
    MINUS           shift, and go to state 81
    NOT             shift, and go to state 82
    LP              shift, and go to state 83

    $default  reduce using rule 84 (OptExpr)

    VarDecl         go to state 84
    Type            go to state 85
    NamedType       go to state 20
    ArrayType       go to state 21
    StmtBlock       go to state 86
    Stmts           go to state 87
    Stmt            go to state 88
    IfStmt          go to state 89
    WhileStmt       go to state 90
    ForStmt         go to state 91
    ReturnStmt      go to state 92
    BreakStmt       go to state 93
    PrintStmt       go to state 94
    Expr            go to state 95
    NewExpr         go to state 96
    NewArrayExpr    go to state 97
    AssignExpr      go to state 98
    ArithmeticExpr  go to state 99
    RelationalExpr  go to state 100
    LogicalExpr     go to state 101
    OptExpr         go to state 102
    LValue          go to state 103
    FieldAccess     go to state 104
    Call            go to state 105
    ArrayAccess     go to state 106
    Constant        go to state 107


State 58

   14 FunDecl: VOID ID LP Formals RP StmtBlock .

    $default  reduce using rule 14 (FunDecl)


State 59

   12 ArrayType: Type . LB RB
   19 Variables: Variables COMMA Type . ID

    ID  shift, and go to state 108
    LB  shift, and go to state 31


State 60

   16 FunDecl: STATIC VOID ID LP Formals RP . StmtBlock

    LC  shift, and go to state 57

    StmtBlock  go to state 109


State 61

   15 FunDecl: STATIC Type ID LP Formals RP . StmtBlock

    LC  shift, and go to state 57

    StmtBlock  go to state 110


State 62

   13 FunDecl: Type ID LP Formals RP StmtBlock .

    $default  reduce using rule 13 (FunDecl)


State 63

   47 BreakStmt: BREAK . SEMI

    SEMI  shift, and go to state 111


State 64

   45 ForStmt: FOR . LP OptExpr SEMI Expr SEMI OptExpr RP Stmt

    LP  shift, and go to state 112


State 65

   42 IfStmt: IF . LP Expr RP Stmt
   43       | IF . LP Expr RP Stmt ELSE Stmt

    LP  shift, and go to state 113


State 66

   63 NewExpr: NEW . ID LP RP

    ID  shift, and go to state 114


State 67

   64 NewArrayExpr: NEWARRAY . LP Type COMMA Expr RP

    LP  shift, and go to state 115


State 68

   46 ReturnStmt: RETURN . OptExpr SEMI
